[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/scenes/roster/Roster.gd" type="Script" id=1]
[ext_resource path="res://game/scenes/roster/HeroRosterEntry.tscn" type="PackedScene" id=2]

[node name="Roster" type="Node2D"]
script = ExtResource( 1 )

[node name="ScrollArea" type="ScrollContainer" parent="."]
margin_top = 35.0
margin_right = 235.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VboxHeroList" type="VBoxContainer" parent="ScrollArea"]
margin_right = 221.0
margin_bottom = 636.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroRosterEntry" parent="ScrollArea/VboxHeroList" instance=ExtResource( 2 )]
margin_right = 221.0

[node name="HeroRosterEntry2" parent="ScrollArea/VboxHeroList" instance=ExtResource( 2 )]
margin_top = 128.0
margin_right = 221.0
margin_bottom = 252.0

[node name="HeroRosterEntry3" parent="ScrollArea/VboxHeroList" instance=ExtResource( 2 )]
margin_top = 256.0
margin_right = 221.0
margin_bottom = 380.0

[node name="HeroRosterEntry4" parent="ScrollArea/VboxHeroList" instance=ExtResource( 2 )]
margin_top = 384.0
margin_right = 221.0
margin_bottom = 508.0

[node name="HeroRosterEntry5" parent="ScrollArea/VboxHeroList" instance=ExtResource( 2 )]
margin_top = 512.0
margin_right = 221.0
margin_bottom = 636.0

[node name="ToggleRosterBtn" type="Button" parent="."]
margin_left = 2.0
margin_top = 9.0
margin_right = 118.0
margin_bottom = 29.0
toggle_mode = true
text = "Hide Roster"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="ToggleRosterBtn" to="." method="_on_ToggleRosterBtn_toggled"]
